@@ -4,12 +4,12 @@ import static java.lang.Boolean.TRUE;
 import static java.util.Collections.emptyList;
 import static org.opentripplanner.apis.transmodel.mapping.SeverityMapper.getTransmodelSeverity;
 import static org.opentripplanner.apis.transmodel.mapping.TransitIdMapper.mapIDToDomain;
+import static org.opentripplanner.apis.transmodel.mapping.TransitIdMapper.mapIDsToDomain;
 import static org.opentripplanner.apis.transmodel.mapping.TransitIdMapper.mapIDsToDomainNullSafe;
 import static org.opentripplanner.apis.transmodel.model.EnumTypes.FILTER_PLACE_TYPE_ENUM;
 import static org.opentripplanner.apis.transmodel.model.EnumTypes.MULTI_MODAL_MODE;
 import static org.opentripplanner.apis.transmodel.model.EnumTypes.TRANSPORT_MODE;
 import static org.opentripplanner.apis.transmodel.model.scalars.DateTimeScalarFactory.createMillisecondsSinceEpochAsDateTimeStringScalar;
-import static org.opentripplanner.apis.transmodel.support.GqlUtil.toListNullSafe;
 import static org.opentripplanner.model.projectinfo.OtpProjectInfo.projectInfo;
 
 import graphql.Scalars;
@@ -30,7 +30,6 @@ import graphql.schema.GraphQLOutputType;
 import graphql.schema.GraphQLScalarType;
 import graphql.schema.GraphQLSchema;
 import graphql.schema.SchemaTransformer;
-import java.time.LocalDate;
 import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -124,6 +123,7 @@ import org.opentripplanner.service.vehiclerental.model.VehicleRentalPlace;
 import org.opentripplanner.transit.api.model.FilterValues;
 import org.opentripplanner.transit.api.request.FindRegularStopsByBoundingBoxRequest;
 import org.opentripplanner.transit.api.request.FindRoutesRequest;
+import org.opentripplanner.transit.api.request.FindStopLocationsRequest;
 import org.opentripplanner.transit.api.request.TripRequest;
 import org.opentripplanner.transit.model.basic.TransitMode;
 import org.opentripplanner.transit.model.framework.FeedScopedId;
@@ -384,44 +384,38 @@ public class TransmodelGraphQLSchema {
       dateTimeScalar
     );
 
-    GraphQLInputObjectType inputPlaceIds = GraphQLInputObjectType
-      .newInputObject()
+    GraphQLInputObjectType inputPlaceIds = GraphQLInputObjectType.newInputObject()
       .name("InputPlaceIds")
       .field(
-        GraphQLInputObjectField
-          .newInputObjectField()
+        GraphQLInputObjectField.newInputObjectField()
           .name("quays")
           .description("Quays to include by id.")
           .type(new GraphQLList(Scalars.GraphQLString))
           .build()
       )
       .field(
-        GraphQLInputObjectField
-          .newInputObjectField()
+        GraphQLInputObjectField.newInputObjectField()
           .name("lines")
           .description("Lines to include by id.")
           .type(new GraphQLList(Scalars.GraphQLString))
           .build()
       )
       .field(
-        GraphQLInputObjectField
-          .newInputObjectField()
+        GraphQLInputObjectField.newInputObjectField()
           .name("bikeRentalStations")
           .description("Bike rentals to include by id.")
           .type(new GraphQLList(Scalars.GraphQLString))
           .build()
       )
       .field(
-        GraphQLInputObjectField
-          .newInputObjectField()
+        GraphQLInputObjectField.newInputObjectField()
           .name("bikeParks")
           .description("Bike parks to include by id.")
           .type(new GraphQLList(Scalars.GraphQLString))
           .build()
       )
       .field(
-        GraphQLInputObjectField
-          .newInputObjectField()
+        GraphQLInputObjectField.newInputObjectField()
           .name("carParks")
           .description("Car parks to include by id.")
           .type(new GraphQLList(Scalars.GraphQLString))
@@ -429,21 +423,18 @@ public class TransmodelGraphQLSchema {
       )
       .build();
 
-    GraphQLObjectType queryType = GraphQLObjectType
-      .newObject()
+    GraphQLObjectType queryType = GraphQLObjectType.newObject()
       .name("QueryType")
       .field(tripQuery)
       .field(viaTripQuery)
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("stopPlace")
           .description("Get a single stopPlace based on its id)")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(stopPlaceType)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("id")
               .type(new GraphQLNonNull(Scalars.GraphQLString))
               .build()
@@ -454,23 +445,22 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("stopPlaces")
           .description("Get all stopPlaces")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(new GraphQLNonNull(new GraphQLList(stopPlaceType)))
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("ids")
               .type(new GraphQLList(Scalars.GraphQLString))
               .build()
           )
           .dataFetcher(env -> {
-            if ((env.getArgument("ids") instanceof List)) {
-              return ((List<String>) env.getArgument("ids")).stream()
-                .map(TransitIdMapper::mapIDToDomain)
+            if (env.getArgument("ids") != null) {
+              var ids = mapIDsToDomainNullSafe(env.getArgument("ids"));
+              return ids
+                .stream()
                 .map(id -> StopPlaceType.fetchStopPlaceById(id, env))
                 .collect(Collectors.toList());
             }
@@ -486,36 +476,31 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("stopPlacesByBbox")
           .description("Get all stop places within the specified bounding box")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(new GraphQLNonNull(new GraphQLList(stopPlaceType)))
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("minimumLatitude")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("minimumLongitude")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("maximumLatitude")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("maximumLongitude")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
@@ -524,8 +509,7 @@ public class TransmodelGraphQLSchema {
             GraphQLArgument.newArgument().name("authority").type(Scalars.GraphQLString).build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("multiModalMode")
               .type(MULTI_MODAL_MODE)
               .description(
@@ -536,8 +520,7 @@ public class TransmodelGraphQLSchema {
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("filterByInUse")
               .description("If true only stop places with at least one visiting line are included.")
               .type(Scalars.GraphQLBoolean)
@@ -567,109 +550,89 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("quay")
           .description("Get a single quay based on its id)")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(quayType)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("id")
               .type(new GraphQLNonNull(Scalars.GraphQLString))
               .build()
           )
           .dataFetcher(environment ->
-            GqlUtil
-              .getTransitService(environment)
-              .getStopLocation(mapIDToDomain(environment.getArgument("id")))
+            GqlUtil.getTransitService(environment).getStopLocation(
+              mapIDToDomain(environment.getArgument("id"))
+            )
           )
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("quays")
           .description("Get all quays")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(new GraphQLNonNull(new GraphQLList(quayType)))
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("ids")
               .type(new GraphQLList(Scalars.GraphQLString))
               .build()
           )
           .argument(GraphQLArgument.newArgument().name("name").type(Scalars.GraphQLString).build())
           .dataFetcher(environment -> {
-            if ((environment.getArgument("ids") instanceof List)) {
-              if (
-                environment
-                  .getArguments()
-                  .entrySet()
-                  .stream()
-                  .filter(stringObjectEntry -> stringObjectEntry.getValue() != null)
-                  .count() !=
-                1
-              ) {
+            if (environment.containsArgument("ids")) {
+              var ids = mapIDsToDomainNullSafe(environment.getArgument("ids"));
+
+              if (environment.getArgument("name") != null) {
                 throw new IllegalArgumentException("Unable to combine other filters with ids");
               }
+
               TransitService transitService = GqlUtil.getTransitService(environment);
-              return ((List<String>) environment.getArgument("ids")).stream()
-                .map(id -> transitService.getStopLocation(mapIDToDomain(id)))
-                .collect(Collectors.toList());
+              return ids.stream().map(transitService::getStopLocation).toList();
             }
-            if (environment.getArgument("name") == null) {
-              return GqlUtil.getTransitService(environment).listStopLocations();
-            }
-            //                            else {
-            //                                return index.getLuceneIndex().query(environment.getArgument("name"), true, true, false)
-            //                                        .stream()
-            //                                        .map(result -> index.stopForId.get(mapper.fromIdString(result.id)));
-            //                            }
-            return emptyList();
+
+            FindStopLocationsRequest request = FindStopLocationsRequest.of()
+              .withName(environment.getArgument("name"))
+              .build();
+
+            return GqlUtil.getTransitService(environment).findStopLocations(request);
           })
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("quaysByBbox")
           .description("Get all quays within the specified bounding box")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(new GraphQLNonNull(new GraphQLList(quayType)))
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("minimumLatitude")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("minimumLongitude")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("maximumLatitude")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("maximumLongitude")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("authority")
               .deprecate(
                 "This is the Transmodel namespace or the GTFS feedID - avoid using this. Request a new field if necessary."
@@ -678,8 +641,7 @@ public class TransmodelGraphQLSchema {
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("filterByInUse")
               .description("If true only quays with at least one visiting line are included.")
               .type(Scalars.GraphQLBoolean)
@@ -701,21 +663,20 @@ public class TransmodelGraphQLSchema {
             var authority = environment.<String>getArgument("authority");
             var filterInUse = environment.<Boolean>getArgument("filterByInUse");
 
-            FindRegularStopsByBoundingBoxRequest findRegularStopsByBoundingBoxRequest = FindRegularStopsByBoundingBoxRequest
-              .of(envelope)
-              .withFeedId(authority)
-              .filterByInUse(filterInUse)
-              .build();
+            FindRegularStopsByBoundingBoxRequest findRegularStopsByBoundingBoxRequest =
+              FindRegularStopsByBoundingBoxRequest.of(envelope)
+                .withFeedId(authority)
+                .filterByInUse(filterInUse)
+                .build();
 
-            return GqlUtil
-              .getTransitService(environment)
-              .findRegularStopsByBoundingBox(findRegularStopsByBoundingBoxRequest);
+            return GqlUtil.getTransitService(environment).findRegularStopsByBoundingBox(
+              findRegularStopsByBoundingBoxRequest
+            );
           })
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("quaysByRadius")
           .description(
             "Get all quays within the specified walking radius from a location. There are no maximum " +
@@ -731,24 +692,21 @@ public class TransmodelGraphQLSchema {
             )
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("latitude")
               .description("Latitude of the location")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("longitude")
               .description("Longitude of the location")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("radius")
               .description(
                 "Radius via streets (in meters) to search for from the specified location"
@@ -763,26 +721,25 @@ public class TransmodelGraphQLSchema {
           .dataFetcher(environment -> {
             List<NearbyStop> stops;
             try {
-              stops =
-                GqlUtil
-                  .getGraphFinder(environment)
-                  .findClosestStops(
-                    new Coordinate(
-                      environment.getArgument("longitude"),
-                      environment.getArgument("latitude")
-                    ),
-                    environment.getArgument("radius")
-                  )
-                  .stream()
-                  .filter(stopAtDistance ->
+              stops = GqlUtil.getGraphFinder(environment)
+                .findClosestStops(
+                  new Coordinate(
+                    environment.getArgument("longitude"),
+                    environment.getArgument("latitude")
+                  ),
+                  environment.getArgument("radius")
+                )
+                .stream()
+                .filter(
+                  stopAtDistance ->
                     environment.getArgument("authority") == null ||
                     stopAtDistance.stop
                       .getId()
                       .getFeedId()
                       .equalsIgnoreCase(environment.getArgument("authority"))
-                  )
-                  .sorted(Comparator.comparing(s -> s.distance))
-                  .collect(Collectors.toList());
+                )
+                .sorted(Comparator.comparing(s -> s.distance))
+                .collect(Collectors.toList());
             } catch (RoutingValidationException e) {
               LOG.warn(
                 "findClosestPlacesByWalking failed with exception, returning empty list of places. ",
@@ -802,8 +759,7 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("nearest")
           .description(
             "Get all places (quays, stop places, car parks etc. with coordinates) within the specified radius from a location. The returned type has two fields place and distance. The search is done by walking so the distance is according to the network of walkables."
@@ -817,24 +773,21 @@ public class TransmodelGraphQLSchema {
             )
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("latitude")
               .description("Latitude of the location")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("longitude")
               .description("Longitude of the location")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("maximumDistance")
               .description(
                 "Maximum distance (in meters) to search for from the specified location. Default is 2000m."
@@ -844,8 +797,7 @@ public class TransmodelGraphQLSchema {
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("maximumResults")
               .description(
                 "Maximum number of results. Search is stopped when this limit is reached. Default is 20."
@@ -855,8 +807,7 @@ public class TransmodelGraphQLSchema {
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("filterByPlaceTypes")
               .description("Only include places of given types if set. Default accepts all types")
               .defaultValue(Arrays.asList(TransmodelPlaceType.values()))
@@ -864,8 +815,7 @@ public class TransmodelGraphQLSchema {
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("filterByModes")
               .description(
                 "Only include places that include this mode. Only checked for places with mode i.e. quays, departures."
@@ -874,8 +824,7 @@ public class TransmodelGraphQLSchema {
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("filterByInUse")
               .description(
                 "Only affects queries for quays and stop places. If true only quays and stop places with at least one visiting line are included."
@@ -885,16 +834,14 @@ public class TransmodelGraphQLSchema {
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("filterByIds")
               .description("Only include places that match one of the given ids.")
               .type(inputPlaceIds)
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("multiModalMode")
               .type(MULTI_MODAL_MODE)
               .description(
@@ -918,18 +865,15 @@ public class TransmodelGraphQLSchema {
             if (filterByIds != null) {
               filterByStops = toIdList(((List<String>) filterByIds.get("quays")));
               filterByRoutes = toIdList(((List<String>) filterByIds.get("lines")));
-              filterByBikeRentalStations =
-                filterByIds.get("bikeRentalStations") != null
-                  ? (List<String>) filterByIds.get("bikeRentalStations")
-                  : List.of();
-              filterByBikeParks =
-                filterByIds.get("bikeParks") != null
-                  ? (List<String>) filterByIds.get("bikeParks")
-                  : List.of();
-              filterByCarParks =
-                filterByIds.get("carParks") != null
-                  ? (List<String>) filterByIds.get("carParks")
-                  : List.of();
+              filterByBikeRentalStations = filterByIds.get("bikeRentalStations") != null
+                ? (List<String>) filterByIds.get("bikeRentalStations")
+                : List.of();
+              filterByBikeParks = filterByIds.get("bikeParks") != null
+                ? (List<String>) filterByIds.get("bikeParks")
+                : List.of();
+              filterByCarParks = filterByIds.get("carParks") != null
+                ? (List<String>) filterByIds.get("carParks")
+                : List.of();
             }
 
             List<TransitMode> filterByTransportModes = environment.getArgument("filterByModes");
@@ -947,52 +891,45 @@ public class TransmodelGraphQLSchema {
             }
 
             List<PlaceAtDistance> places;
-            places =
-              GqlUtil
-                .getGraphFinder(environment)
-                .findClosestPlaces(
-                  environment.getArgument("latitude"),
-                  environment.getArgument("longitude"),
-                  environment.getArgument("maximumDistance"),
-                  maxResults,
-                  filterByTransportModes,
-                  filterByPlaceTypes,
-                  filterByStops,
-                  filterByStations,
-                  filterByRoutes,
-                  filterByBikeRentalStations,
-                  filterByNetwork,
-                  GqlUtil.getTransitService(environment)
-                );
+            places = GqlUtil.getGraphFinder(environment).findClosestPlaces(
+              environment.getArgument("latitude"),
+              environment.getArgument("longitude"),
+              environment.getArgument("maximumDistance"),
+              maxResults,
+              filterByTransportModes,
+              filterByPlaceTypes,
+              filterByStops,
+              filterByStations,
+              filterByRoutes,
+              filterByBikeRentalStations,
+              filterByNetwork,
+              GqlUtil.getTransitService(environment)
+            );
 
             if (TRUE.equals(environment.getArgument("filterByInUse"))) {
-              places =
-                places
-                  .stream()
-                  .filter(placeAtDistance -> {
-                    if (placeAtDistance.place() instanceof StopLocation stop) {
-                      return !GqlUtil
-                        .getTransitService(environment)
-                        .findPatterns(stop, true)
-                        .isEmpty();
-                    } else {
-                      return true;
-                    }
-                  })
-                  .toList();
+              places = places
+                .stream()
+                .filter(placeAtDistance -> {
+                  if (placeAtDistance.place() instanceof StopLocation stop) {
+                    return !GqlUtil.getTransitService(environment)
+                      .findPatterns(stop, true)
+                      .isEmpty();
+                  } else {
+                    return true;
+                  }
+                })
+                .toList();
             }
 
-            places =
-              PlaceAtDistanceType
-                .convertQuaysToStopPlaces(
-                  placeTypes,
-                  places,
-                  environment.getArgument("multiModalMode"),
-                  GqlUtil.getTransitService(environment)
-                )
-                .stream()
-                .limit(orgMaxResults)
-                .collect(Collectors.toList());
+            places = PlaceAtDistanceType.convertQuaysToStopPlaces(
+              placeTypes,
+              places,
+              environment.getArgument("multiModalMode"),
+              GqlUtil.getTransitService(environment)
+            )
+              .stream()
+              .limit(orgMaxResults)
+              .collect(Collectors.toList());
             if (places.isEmpty()) {
               return new DefaultConnection<>(
                 List.of(),
@@ -1004,29 +941,26 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("authority")
           .description("Get an authority by ID")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(authorityType)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("id")
               .type(new GraphQLNonNull(Scalars.GraphQLString))
               .build()
           )
           .dataFetcher(environment -> {
-            return GqlUtil
-              .getTransitService(environment)
-              .getAgency(TransitIdMapper.mapIDToDomain(environment.getArgument("id")));
+            return GqlUtil.getTransitService(environment).getAgency(
+              TransitIdMapper.mapIDToDomain(environment.getArgument("id"))
+            );
           })
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("authorities")
           .description("Get all authorities")
           .withDirective(TransmodelDirectives.TIMING_DATA)
@@ -1037,29 +971,26 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("operator")
           .description("Get a operator by ID")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(operatorType)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("id")
               .type(new GraphQLNonNull(Scalars.GraphQLString))
               .build()
           )
           .dataFetcher(environment ->
-            GqlUtil
-              .getTransitService(environment)
-              .getOperator(TransitIdMapper.mapIDToDomain(environment.getArgument("id")))
+            GqlUtil.getTransitService(environment).getOperator(
+              TransitIdMapper.mapIDToDomain(environment.getArgument("id"))
+            )
           )
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("operators")
           .description("Get all operators")
           .withDirective(TransmodelDirectives.TIMING_DATA)
@@ -1070,15 +1001,13 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("line")
           .description("Get a single line based on its id")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(lineType)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("id")
               .type(new GraphQLNonNull(Scalars.GraphQLID))
               .build()
@@ -1088,22 +1017,20 @@ public class TransmodelGraphQLSchema {
             if (id.isBlank()) {
               return null;
             }
-            return GqlUtil
-              .getTransitService(environment)
-              .getRoute(TransitIdMapper.mapIDToDomain(id));
+            return GqlUtil.getTransitService(environment).getRoute(
+              TransitIdMapper.mapIDToDomain(id)
+            );
           })
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("lines")
           .description("Get all _lines_")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(new GraphQLNonNull(new GraphQLList(lineType)))
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("ids")
               .description(
                 "Set of ids of _lines_ to fetch. If this is set, no other filters can be set."
@@ -1112,8 +1039,7 @@ public class TransmodelGraphQLSchema {
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("name")
               .description(
                 "Prefix of the _name_ of the _line_ to fetch. This filter is case insensitive."
@@ -1122,40 +1048,35 @@ public class TransmodelGraphQLSchema {
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("publicCode")
               .description("_Public code_ of the _line_ to fetch.")
               .type(Scalars.GraphQLString)
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("publicCodes")
               .description("Set of _public codes_ to fetch _lines_ for.")
               .type(new GraphQLList(Scalars.GraphQLString))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("transportModes")
               .description("Set of _transport modes_ to fetch _lines_ for.")
               .type(new GraphQLList(TRANSPORT_MODE))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("authorities")
               .description("Set of ids of _authorities_ to fetch _lines_ for.")
               .type(new GraphQLList(Scalars.GraphQLString))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("flexibleOnly")
               .description(
                 "Filter by _lines_ containing flexible / on demand _service journey_ only."
@@ -1170,9 +1091,13 @@ public class TransmodelGraphQLSchema {
 
               // flexibleLines gets special treatment because it has a default value.
               if (
-                Stream
-                  .of("name", "publicCode", "publicCodes", "transportModes", "authorities")
-                  .anyMatch(environment::containsArgument) ||
+                Stream.of(
+                  "name",
+                  "publicCode",
+                  "publicCodes",
+                  "transportModes",
+                  "authorities"
+                ).anyMatch(environment::containsArgument) ||
                 Boolean.TRUE.equals(environment.getArgument("flexibleOnly"))
               ) {
                 throw new IllegalArgumentException("Unable to combine other filters with ids");
@@ -1197,8 +1122,7 @@ public class TransmodelGraphQLSchema {
             );
             boolean flexibleOnly = Boolean.TRUE.equals(environment.getArgument("flexibleOnly"));
 
-            FindRoutesRequest findRoutesRequest = FindRoutesRequest
-              .of()
+            FindRoutesRequest findRoutesRequest = FindRoutesRequest.of()
               .withLongName(name)
               .withShortName(publicCode)
               .withShortNames(publicCodes)
@@ -1212,28 +1136,25 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("groupOfLines")
           .description("Get a single group of lines based on its id")
           .type(groupOfLinesType)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("id")
               .type(new GraphQLNonNull(Scalars.GraphQLString))
               .build()
           )
           .dataFetcher(environment ->
-            GqlUtil
-              .getTransitService(environment)
-              .getGroupOfRoutes(TransitIdMapper.mapIDToDomain(environment.getArgument("id")))
+            GqlUtil.getTransitService(environment).getGroupOfRoutes(
+              TransitIdMapper.mapIDToDomain(environment.getArgument("id"))
+            )
           )
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("groupsOfLines")
           .description("Get all groups of lines")
           .type(new GraphQLNonNull(new GraphQLList(new GraphQLNonNull(groupOfLinesType))))
@@ -1241,89 +1162,64 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("serviceJourney")
           .description("Get a single service journey based on its id")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(serviceJourneyType)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("id")
               .type(new GraphQLNonNull(Scalars.GraphQLString))
               .build()
           )
           .dataFetcher(environment -> {
-            return GqlUtil
-              .getTransitService(environment)
-              .getTrip(TransitIdMapper.mapIDToDomain(environment.getArgument("id")));
+            return GqlUtil.getTransitService(environment).getTrip(
+              TransitIdMapper.mapIDToDomain(environment.getArgument("id"))
+            );
           })
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("serviceJourneys")
           .description("Get all _service journeys_")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(new GraphQLNonNull(new GraphQLList(serviceJourneyType)))
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("lines")
               .description("Set of ids of _lines_ to fetch _service journeys_ for.")
               .type(new GraphQLList(Scalars.GraphQLID))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("privateCodes")
               .description("Set of ids of _private codes_ to fetch _service journeys_ for.")
               .type(new GraphQLList(Scalars.GraphQLString))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("activeDates")
               .description("Set of _operating days_ to fetch _service journeys_ for.")
               .type(new GraphQLList(TransmodelScalars.DATE_SCALAR))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("authorities")
               .description("Set of ids of _authorities_ to fetch _service journeys_ for.")
               .type(new GraphQLList(Scalars.GraphQLString))
               .build()
           )
           .dataFetcher(environment -> {
-            var authorities = FilterValues.ofEmptyIsEverything(
-              "authorities",
-              mapIDsToDomainNullSafe(environment.getArgument("authorities"))
-            );
-            var lineIds = FilterValues.ofEmptyIsEverything(
-              "lines",
-              mapIDsToDomainNullSafe(environment.getArgument("lines"))
-            );
-            var privateCodes = FilterValues.ofEmptyIsEverything(
-              "privateCodes",
-              toListNullSafe(environment.<List<String>>getArgument("privateCodes"))
-            );
-            var activeServiceDates = FilterValues.ofEmptyIsEverything(
-              "activeDates",
-              toListNullSafe(environment.<List<LocalDate>>getArgument("activeDates"))
-            );
-
-            TripRequest tripRequest = TripRequest
-              .of()
-              .withAgencies(authorities)
-              .withRoutes(lineIds)
-              .withNetexInternalPlanningCodes(privateCodes)
-              .withServiceDates(activeServiceDates)
+            var tripRequest = TripRequest.of()
+              .withIncludeAgencies(mapIDsToDomain(environment.getArgument("authorities")))
+              .withIncludeRoutes(mapIDsToDomain(environment.getArgument("lines")))
+              .withIncludeNetexInternalPlanningCodes(environment.getArgument("privateCodes"))
+              .withIncludeServiceDates(environment.getArgument("activeDates"))
               .build();
 
             return GqlUtil.getTransitService(environment).getTrips(tripRequest);
@@ -1331,14 +1227,12 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("bikeRentalStations")
           .description("Get all bike rental stations")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("ids")
               .type(new GraphQLList(Scalars.GraphQLString))
               .build()
@@ -1360,22 +1254,19 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("bikeRentalStation")
           .description("Get all bike rental stations")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(bikeRentalStationType)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("id")
               .type(new GraphQLNonNull(Scalars.GraphQLString))
               .build()
           )
           .dataFetcher(environment -> {
-            return GqlUtil
-              .getVehicleRentalService(environment)
+            return GqlUtil.getVehicleRentalService(environment)
               .getVehicleRentalStations()
               .stream()
               .filter(bikeRentalStation ->
@@ -1387,8 +1278,7 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("bikeRentalStationsByBbox")
           .description("Get all bike rental stations within the specified bounding box.")
           .withDirective(TransmodelDirectives.TIMING_DATA)
@@ -1397,8 +1287,7 @@ public class TransmodelGraphQLSchema {
             GraphQLArgument.newArgument().name("minimumLatitude").type(Scalars.GraphQLFloat).build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("minimumLongitude")
               .type(Scalars.GraphQLFloat)
               .build()
@@ -1407,42 +1296,36 @@ public class TransmodelGraphQLSchema {
             GraphQLArgument.newArgument().name("maximumLatitude").type(Scalars.GraphQLFloat).build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("maximumLongitude")
               .type(Scalars.GraphQLFloat)
               .build()
           )
           .dataFetcher(environment ->
-            GqlUtil
-              .getVehicleRentalService(environment)
-              .getVehicleRentalStationForEnvelope(
-                environment.getArgument("minimumLongitude"),
-                environment.getArgument("minimumLatitude"),
-                environment.getArgument("maximumLongitude"),
-                environment.getArgument("maximumLatitude")
-              )
+            GqlUtil.getVehicleRentalService(environment).getVehicleRentalStationForEnvelope(
+              environment.getArgument("minimumLongitude"),
+              environment.getArgument("minimumLatitude"),
+              environment.getArgument("maximumLongitude"),
+              environment.getArgument("maximumLatitude")
+            )
           )
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("bikePark")
           .description("Get a single bike park based on its id")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(bikeParkType)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("id")
               .type(new GraphQLNonNull(Scalars.GraphQLString))
               .build()
           )
           .dataFetcher(environment -> {
             var bikeParkId = mapIDToDomain(environment.getArgument("id"));
-            return GqlUtil
-              .getVehicleParkingService(environment)
+            return GqlUtil.getVehicleParkingService(environment)
               .listBikeParks()
               .stream()
               .filter(bikePark -> bikePark.getId().equals(bikeParkId))
@@ -1452,15 +1335,13 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("bikeParks")
           .description("Get all bike parks")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(new GraphQLNonNull(new GraphQLList(bikeParkType)))
           .dataFetcher(environment ->
-            GqlUtil
-              .getVehicleParkingService(environment)
+            GqlUtil.getVehicleParkingService(environment)
               .listBikeParks()
               .stream()
               .collect(Collectors.toCollection(ArrayList::new))
@@ -1468,8 +1349,7 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("routingParameters")
           .description("Get default routing parameters.")
           .withDirective(TransmodelDirectives.TIMING_DATA)
@@ -1478,15 +1358,13 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("situations")
           .description("Get all active situations.")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(new GraphQLNonNull(new GraphQLList(new GraphQLNonNull(ptSituationElementType))))
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("authorities")
               .description("Filter by reporting authorities.")
               .deprecate(
@@ -1496,24 +1374,21 @@ public class TransmodelGraphQLSchema {
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("codespaces")
               .description("Filter by reporting source.")
               .type(new GraphQLList(Scalars.GraphQLString))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("severities")
               .description("Filter by severity.")
               .type(new GraphQLList(EnumTypes.SEVERITY))
               .build()
           )
           .dataFetcher(environment -> {
-            Collection<TransitAlert> alerts = GqlUtil
-              .getTransitService(environment)
+            Collection<TransitAlert> alerts = GqlUtil.getTransitService(environment)
               .getTransitAlertService()
               .getAllAlerts();
 
@@ -1534,35 +1409,31 @@ public class TransmodelGraphQLSchema {
             }
 
             if (!codespaces.isEmpty()) {
-              alerts =
-                alerts
-                  .stream()
-                  .filter(alert -> codespaces.contains(alert.siriCodespace()))
-                  .collect(Collectors.toSet());
+              alerts = alerts
+                .stream()
+                .filter(alert -> codespaces.contains(alert.siriCodespace()))
+                .collect(Collectors.toSet());
             }
 
             if (environment.getArgument("severities") instanceof List) {
               List<String> severities = environment.getArgument("severities");
-              alerts =
-                alerts
-                  .stream()
-                  .filter(alert -> severities.contains(getTransmodelSeverity(alert.severity())))
-                  .collect(Collectors.toSet());
+              alerts = alerts
+                .stream()
+                .filter(alert -> severities.contains(getTransmodelSeverity(alert.severity())))
+                .collect(Collectors.toSet());
             }
             return alerts;
           })
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("situation")
           .description("Get a single situation based on its situationNumber")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(ptSituationElementType)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("situationNumber")
               .type(new GraphQLNonNull(Scalars.GraphQLString))
               .build()
@@ -1572,23 +1443,20 @@ public class TransmodelGraphQLSchema {
             if (situationNumber.isBlank()) {
               return null;
             }
-            return GqlUtil
-              .getTransitService(environment)
+            return GqlUtil.getTransitService(environment)
               .getTransitAlertService()
               .getAlertById(mapIDToDomain(situationNumber));
           })
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("leg")
           .description("Refetch a single transit leg based on its id")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(LegType.REF)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("id")
               .type(new GraphQLNonNull(Scalars.GraphQLID))
               .build()
@@ -1607,8 +1475,7 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("serverInfo")
           .description(
             "Get OTP deployment information. This is only useful for developers of OTP itself not regular API users."
@@ -1622,8 +1489,7 @@ public class TransmodelGraphQLSchema {
       .field(DatedServiceJourneyQuery.createQuery(datedServiceJourneyType))
       .build();
 
-    var schema = GraphQLSchema
-      .newSchema()
+    var schema = GraphQLSchema.newSchema()
       .query(queryType)
       .additionalType(placeInterface)
       .additionalType(timetabledPassingTime)
